// TODO TZ check
// TODO TZ fix
// TODO CHECK-TZ


0.5.0 (unreleased)
=====
- Port updates until 0.16.2.
  THis includes some libCCD updates missing fro the 0.15.1 update.
  New demo: DemoConvex.
  TODO FIX prism dependency in CollisionTest.test_collision_ray_convex()
  Not ported:
  - resource_control.*
  - simple_cooperation.*
  - Updates to DxWorldProcessContext
  - threaded_solver.ldlt.h

    TODO Check DemoFeedback

  DONE: backwards up until quickstep.cpp

- Added GutHub Actions CI builds for Java 8 and 9. [#95](https://github.com/tzaeschke/ode4j/pull/95)
- Added default logger for demos and tests. [#94](https://github.com/tzaeschke/ode4j/pull/94)
- Added Android API compliance checker, now for API level 24 (the lowest that ode4j passed without changes)
  [#93](https://github.com/tzaeschke/ode4j/pull/93)
- Updated maven dependencies [#92](https://github.com/tzaeschke/ode4j/pull/92)
- Test that internal assertions did not throw Exceptions. This was fixed as part of #86.
  [#74](https://github.com/tzaeschke/ode4j/issues/74)
- Fixes to LWJGL 3.0 [#91](https://github.com/tzaeschke/ode4j/pull/91)
- Moved to LWJGL 3.0 [#89](https://github.com/tzaeschke/ode4j/issues/89)
- Move to Java [#87](https://github.com/tzaeschke/ode4j/issues/87)
  (Cleanup, part of this was done with the move to 0.15.1)
- Update to ODE 0.15.1 [#86](https://github.com/tzaeschke/ode4j/pull/86)
  - This includes increased stability, e.g. the DemoCards won't collapse anymore when 30 levels high.
  - **** WARNING **** : Still missing: trimesh collider updates.
- Changed CI build requirements:
  - Removed openjdk7: Not required. source compatibility is still set to 7, but should
    be safe to change to 8 now (Android Nougat is mostly 8 compatible), this covers > 80% users.
  - Changed oraclejdk build to 11




0.4.2
=====
- Fix regression: missing internal version id
- renamed DQuaternion inverse() to eqInverse()

0.4.1
=====