@@ -26,12 +26,9 @@ package org.ode4j.ode.internal;
 
 import static org.ode4j.ode.OdeConstants.CONTACTS_UNIMPORTANT;
 import static org.ode4j.ode.OdeConstants.dInfinity;
-import static org.ode4j.ode.OdeMath.dCalcVectorCross3;
-import static org.ode4j.ode.OdeMath.dCalcVectorDot3;
-import static org.ode4j.ode.OdeMath.dMultiply0_331;
-import static org.ode4j.ode.OdeMath.dMultiply1_331;
-import static org.ode4j.ode.OdeMath.dNormalize3;
+import static org.ode4j.ode.OdeMath.*;
 import static org.ode4j.ode.internal.Common.*;
+import static org.ode4j.ode.internal.DxCollisionUtil.dVector3Copy;
 import static org.ode4j.ode.internal.cpp4j.Cmath.fabs;
 import static org.ode4j.ode.internal.cpp4j.Cstdio.fprintf;
 import static org.ode4j.ode.internal.cpp4j.Cstdio.stdout;
@@ -437,7 +434,8 @@ public class DxConvex extends DxGeom implements DConvex {
 	 * Returns Whether or not the segment ab intersects plane p.
 	 * @param a origin of the segment
 	 * @param b segment destination
-	 * @param p plane to test for intersection
+	 * @param pV plane to test for intersection - vector
+	 * @param pD plane to test for intersection - depth
 	 * @param t returns the time "t" in the segment ray that gives us the intersecting
 	 * point
 	 * @param q returns the intersection point
@@ -477,16 +475,16 @@ public class DxConvex extends DxGeom implements DConvex {
 		return false;
 	}
 
-	/** 
-	 * Returns the Closest Point in Ray 1 to Ray 2.
-	 * @param Origin1 The origin of Ray 1
-	 * @param Direction1 The direction of Ray 1
-	 * @param Origin1 The origin of Ray 2
-	 * @param Direction1 The direction of Ray 3
-	 * @param t the time "t" in Ray 1 that gives us the closest point
-	 * (closest_point=Origin1+(Direction1*t).
-	 * @return true if there is a closest point, false if the rays are paralell.
-	 */
+	//	/**
+	//	 * Returns the Closest Point in Ray 1 to Ray 2.
+	//	 * @param Origin1 The origin of Ray 1
+	//	 * @param Direction1 The direction of Ray 1
+	//	 * @param Origin1 The origin of Ray 2
+	//	 * @param Direction1 The direction of Ray 3
+	//	 * @param t the time "t" in Ray 1 that gives us the closest point
+	//	 * (closest_point=Origin1+(Direction1*t).
+	//	 * @return true if there is a closest point, false if the rays are paralell.
+	//	 */
 	//inline bool ClosestPointInRay(final dVector3 Origin1,
 	//	      final dVector3 Direction1,
 	//	      final dVector3 Origin2,
@@ -1465,10 +1463,7 @@ Helper struct
 		ccso.min_depth=dInfinity; // Min not min at all
 		ccso.depth_type=0; // no type
 		// precompute distance vector
-//		ccso.dist[0] = cvx2.final_posr.pos[0]-cvx1.final_posr.pos[0];
-//		ccso.dist[1] = cvx2.final_posr.pos[1]-cvx1.final_posr.pos[1];
-//		ccso.dist[2] = cvx2.final_posr.pos[2]-cvx1.final_posr.pos[2];
-		ccso.dist.eqDiff(cvx2.final_posr().pos(), cvx1.final_posr().pos());
+		dSubtractVectors3(ccso.dist, cvx2.final_posr().pos(), cvx1.final_posr().pos());
 		int maxc = flags & NUMC_MASK;
 		dIASSERT(maxc != 0);
 		DVector3 i1 = new DVector3(),i2 = new DVector3(),
@@ -1514,10 +1509,7 @@ Helper struct
 			//CollisionUtil.dVector3Copy(ccso.dist,dist);
 			dist = new DVector3(ccso.dist);
 			reference_side = GetSupportSide(dist,cvx1);
-//			dist[0]=-dist[0];
-//			dist[1]=-dist[1];
-//			dist[2]=-dist[2];
-			dist.scale(-1);
+			dNegateVector3(dist);
 			incident_side = GetSupportSide(dist,cvx2);
 
 			pReferencePolyPos = 0;//cvx1.polygons;
@@ -1591,22 +1583,28 @@ Helper struct
 					d2 = r2.dot(planeV) - planeD;
 					if(d1*d2<0)
 					{
+						out = false;
+
 						// Edge intersects plane
-						IntersectSegmentPlane(r1,r2,planeV, planeD,t,p);
-						// Check the resulting point again to make sure it is inside the reference convex
-						out=false;
-						for(int k=0;k<cvx1.planecount;++k)
+						if (!IntersectSegmentPlane(r1,r2,planeV, planeD,t,p))
 						{
-//							d = p[0]*cvx1.planes[(k*4)+0]+
-//							p[1]*cvx1.planes[(k*4)+1]+
-//							p[2]*cvx1.planes[(k*4)+2]-
-//							cvx1.planes[(k*4)+3];
-							d = p.dot(cvx1.planesV[k]) - cvx1.planesD[k];
-							if(d>0)
-							{
-								out = true;
-								break;
-							};
+							out = true;
+						}
+
+						if (!out) {
+							out = false;
+							for (int k = 0; k < cvx1.planecount; ++k) {
+								//							d = p[0]*cvx1.planes[(k*4)+0]+
+								//							p[1]*cvx1.planes[(k*4)+1]+
+								//							p[2]*cvx1.planes[(k*4)+2]-
+								//							cvx1.planes[(k*4)+3];
+								d = p.dot(cvx1.planesV[k]) - cvx1.planesD[k];
+								if (d > 0) {
+									out = true;
+									break;
+								}
+								;
+							}
 						}
 						if(!out)
 						{
@@ -1632,17 +1630,13 @@ Helper struct
 							d = p.dot(rplaneV) - rplaneD;
 							if(d>0)
 							{
-								//dVector3Copy(p,SAFECONTACT(flags, contact, contacts, skip).pos);
-								//dVector3Copy(rplane,SAFECONTACT(flags, contact, contacts, skip).normal);
-								//SAFECONTACT(flags, contact, contacts, skip).g1=cvx1;//&cvx1;
-								//SAFECONTACT(flags, contact, contacts, skip).g2=cvx2;//&cvx2;
-								//SAFECONTACT(flags, contact, contacts, skip).depth=d;
-								DContactGeom contact = contactBuf.getSafe(flags, contacts);
-								contact.pos.set(p);
-								contact.normal.set(rplaneV);
-								contact.g1 = cvx1;
-								contact.g2 = cvx2;
-								contact.depth = d;
+								// SAFECONTACT(flags, contact, contacts, skip);
+								DContactGeom target = contactBuf.getSafe(flags, contacts);
+								dVector3Copy(p, target.pos);
+								dVector3Copy(rplaneV, target.normal);
+								target.g1 = cvx1;
+								target.g2 = cvx2;
+								target.depth = d;
 								++contacts;
 								if (contacts==maxc) return contacts;
 							}
@@ -1661,17 +1655,13 @@ Helper struct
 				d = i1.dot(rplaneV) - rplaneD;
 				if(d>0)
 				{
-					DContactGeom contact = contactBuf.getSafe(flags, contacts);
-					//dVector3Copy(i1,SAFECONTACT(flags, contact, contacts, skip).pos);
-					//dVector3Copy(rplane,SAFECONTACT(flags, contact, contacts, skip).normal);
-					//SAFECONTACT(flags, contact, contacts, skip).g1=cvx1;//&cvx1;
-					//SAFECONTACT(flags, contact, contacts, skip).g2=cvx2;//&cvx2;
-					//SAFECONTACT(flags, contact, contacts, skip).depth=d;
-					contact.pos.set(i1);
-					contact.normal.set(rplaneV);
-					contact.g1 = cvx1;
-					contact.g2 = cvx2;
-					contact.depth = d;
+					// dContactGeom *target = SAFECONTACT(flags, contact, contacts, skip);
+					DContactGeom target = contactBuf.getSafe(flags, contacts);
+					dVector3Copy(i1, target.pos);
+					dVector3Copy(rplaneV, target.normal);
+					target.g1 = cvx1;
+					target.g2 = cvx2;
+					target.depth = d;
 					++contacts;
 					if (contacts==maxc) return contacts;
 				}
@@ -1739,10 +1729,9 @@ Helper struct
 					outside = false;
 					for(int j=0;j<contacts;++j)
 					{
-//						if((SAFECONTACT(flags, contact, j, skip).pos[0]==i1[0])&&
-//								(SAFECONTACT(flags, contact, j, skip).pos[1]==i1[1])&&
-//								(SAFECONTACT(flags, contact, j, skip).pos[2]==i1[2]))
-						if (contactBuf.getSafe(flags, j).pos.isEq(i1))
+						// dContactGeom *cur_contact = SAFECONTACT(flags, contact, j, skip);
+						DContactGeom cur_contact = contactBuf.getSafe(flags, j);
+						if (cur_contact.pos.isEq(i1))
 						{
 							outside=true;
 						}
@@ -1756,17 +1745,13 @@ Helper struct
 						d = i1.dot(rplaneV) - rplaneD;
 						if(d>0)
 						{
-							//dVector3Copy(i1,SAFECONTACT(flags, contact, contacts, skip).pos);
-							//dVector3Copy(rplane,SAFECONTACT(flags, contact, contacts, skip).normal);
-							//SAFECONTACT(flags, contact, contacts, skip).g1=cvx1;//&cvx1;
-							//SAFECONTACT(flags, contact, contacts, skip).g2=cvx2;//&cvx2;
-							//SAFECONTACT(flags, contact, contacts, skip).depth=d;
-							DContactGeom contact = contactBuf.getSafe(flags, contacts);
-							contact.pos.set(i1);
-							contact.normal.set(rplaneV);
-							contact.g1 = cvx1;
-							contact.g2 = cvx2;
-							contact.depth = d;
+							// dContactGeom *target = SAFECONTACT(flags, contact, contacts, skip);
+							DContactGeom target = contactBuf.getSafe(flags, contacts);
+							dVector3Copy(i1, target.pos);
+							dVector3Copy(rplaneV, target.normal);
+							target.g1 = cvx1;
+							target.g2 = cvx2;
+							target.depth = d;
 							++contacts;
 							if (contacts==maxc) return contacts;
 						}
@@ -1774,51 +1759,38 @@ Helper struct
 				}
 			}
 		}
-		else if(ccso.depth_type==2) // edge-edge
+		else if (ccso.depth_type == 2) // edge-edge
 		{
-//			// Some parts borrowed from dBoxBox
-//			DVector3 ua = new DVector3(),ub = new DVector3(),pa = new DVector3(),pb = new DVector3();
-//			RefDouble alpha=new RefDouble(),beta=new RefDouble();
-//			// Get direction of first edge
-//			//for (i=0; i<3; i++) ua[i] = ccso.e1b[i]-ccso.e1a[i];
-//			ua.eqDiff(ccso.e1b, ccso.e1a);
-//			dNormalize3(ua); // normalization shouldn't be necesary but dLineClosestApproach requires it
-//			// Get direction of second edge
-//			//for (i=0; i<3; i++) ub[i] = ccso.e2b[i]-ccso.e2a[i];
-//			ub.eqDiff(ccso.e2b, ccso.e2a);
-//			dNormalize3(ub); // same as with ua normalization
-//			// Get closest points between edges (one at each)
-//			DxCollisionUtil.dLineClosestApproach (ccso.e1a,ua,ccso.e2a,ub,alpha,beta);
-//			//for (i=0; i<3; i++) pa[i] = ccso.e1a[i]+(ua[i]*alpha.get());
-//			pa.eqSum(ccso.e1a, ua, alpha.get());
-//			//for (i=0; i<3; i++) pb[i] = ccso.e2a[i]+(ub[i]*beta.get());
-//			pb.eqSum(ccso.e2a, ub, beta.get());
-//			// Set the contact point as halfway between the 2 closest points
-////			for (i=0; i<3; i++) SAFECONTACT(flags, contact, contacts, skip).pos[i] = REAL(0.5)*(pa[i]+pb[i]);
-////			SAFECONTACT(flags, contact, contacts, skip).g1=cvx1;//&cvx1;
-////			SAFECONTACT(flags, contact, contacts, skip).g2=cvx2;//&cvx2;
-////			dVector3Copy(ccso.plane,SAFECONTACT(flags, contact, contacts, skip).normal);
-////			SAFECONTACT(flags, contact, contacts, skip).depth=ccso.min_depth;
-//			DContactGeom contact = contactBuf.getSafe(flags, contacts);
-//			contact.pos.eqSum(pa, 0.5, pb, 0.5);
-//			contact.g1 = cvx1;
-//			contact.g2 = cvx2;
-//			//TODO TZ optimize with dVector3!
-//			contact.normal.set(ccso.plane.get0(), ccso.plane.get1(), ccso.plane.get2());
-//			contact.depth = ccso.min_depth;
-//			++contacts;
-
 		    DVector3 c1 = new DVector3(), c2 = new DVector3();
-			DContactGeom contact = contactBuf.getSafe(flags, contacts);
-		    //SAFECONTACT(flags, contact, contacts, skip)->depth = 
-			contact.depth = dSqrt(ClosestPointBetweenSegments(ccso.e1a,ccso.e1b,ccso.e2a,ccso.e2b,c1,c2));
-		    contact.g1=cvx1;
-		    contact.g2=cvx2;
-		    //dVector3Copy(c1,SAFECONTACT(flags, contact, contacts, skip)->pos);
-		    contact.pos.set( c1 );
-		    contact.normal.eqDiff(c2, c1);
-		    contact.normal.normalize();
-		    //dNormalize3(SAFECONTACT(flags, contact, contacts, skip)->normal);
+			ClosestPointBetweenSegments(ccso.e1a, ccso.e1b, ccso.e2a, ccso.e2b, c1, c2);
+
+			// dContactGeom *target = SAFECONTACT(flags, contact, contacts, skip);
+			DContactGeom target = contactBuf.getSafe(flags, contacts);
+			dSubtractVectors3(target.normal, c2, c1);
+			double depth_square = dCalcVectorLengthSquare3(target.normal);
+
+			if (dxSafeNormalize3(target.normal))
+			{
+				target.depth = dSqrt(depth_square);
+			}
+			else
+			{
+				// If edges coincide return direction from one center to the other as the contact normal
+				dVector3Copy(ccso.dist, target.normal);
+
+				if (!dxSafeNormalize3(target.normal))
+				{
+					// If the both centers coincide as well return an arbitrary vector. The depth is going to be zero anyway.
+					// dAssignVector3(target.normal, 1, 0, 0);
+					target.normal.set(1, 0, 0);
+				}
+
+				target.depth = 0; // Since the edges coincide, return a contact of zero depth
+			}
+
+			target.g1 = cvx1;
+			target.g2 = cvx2;
+			dVector3Copy(c1, target.pos);
 		    contacts++;
 		}
 		return contacts;
@@ -1936,17 +1908,31 @@ Helper struct
 			contact.side2 = -1; // TODO: set plane index?
 	
 			double alpha, beta, nsign;
+			boolean flag = false;
 	
 			//
 			// Compute some useful info
 			//
-	
-			DVector3 ray_pos = new DVector3();
-			DVector3 ray_dir = new DVector3();
 
-			dMultiply1_331(ray_pos, convex.final_posr().R(), new DVector3(ray.final_posr().pos()).sub(convex.final_posr().pos()));
-			dMultiply1_331(ray_dir, convex.final_posr().R(), ray.final_posr().R().columnAsNewVector(2));
-			boolean flag = false;
+			//			dVector3 ray_pos = {
+			//					ray->final_posr->pos[0] - convex->final_posr->pos[0],
+			//					ray->final_posr->pos[1] - convex->final_posr->pos[1],
+			//					ray->final_posr->pos[2] - convex->final_posr->pos[2]
+			//			};
+			DVector3 ray_pos = new DVector3(ray.final_posr().pos()).sub(convex.final_posr().pos());
+			//
+			//			dVector3 ray_dir = {
+			//					ray->final_posr->R[0 * 4 + 2],
+			//					ray->final_posr->R[1 * 4 + 2],
+			//					ray->final_posr->R[2 * 4 + 2]
+			//			};
+			DVector3 ray_dir = ray.final_posr().R().columnAsNewVector(2);
+
+			//dMultiply1_331(ray_pos, convex->final_posr->R, ray_pos);
+			//dMultiply1_331(ray_dir, convex->final_posr->R, ray_dir);
+			dMultiply1_331(ray_pos, convex.final_posr().R(), ray_pos);
+			dMultiply1_331(ray_dir, convex.final_posr().R(), ray_dir);
+
 			for ( int i = 0; i < convex.planecount; ++i )
 			{
 				// Alias this plane.
